# ny-taxi-dataset-docker-sql

./: .gitignore  Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
.ipynb_checkpoints/: notebook-checkpoint.ipynb
