[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "click>=8.4.2",
    "fsspec>=2026.6.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.5.0",
]
